drupal/sites/all/themes/antistatique/assets/sass/layout/header.scss
/*doc
---
title: Cover Overlap
name: a-cover-overlap
category: Layout - Cover
---

```html_example
<div class="img-hero teammate-hero" style="background-image:url('img/cover_Alberto.jpg')">
  <h1>Alberto Gomez</h1>
</div>
<div class="container">
  <div class="cover-overlap">
    <header class="clearfix">
      <img class="img-circle img-responsive img-center" src="../img/team/Round_512_Alberto.png" alt="La bouille d'Alberto">
      <h2 class="h6">Digital Strategist & Founder</h2>
    </header>
  </div>
</div>
```

*/

.cover-overlap {
  margin-top: -50px;
  position: relative;

  h1 {
    margin-bottom: $font-size-base * 2;
  }
  h2 {
    padding-bottom: 38px;
  }

  header {
    text-align: center;
    border-bottom: 1px solid $hr-border;
    margin-bottom: 50px;

    img {
      max-width: 100px;
    }
  }
  @media only screen and (max-width: $screen-xs-max) {
    margin-top: 0;
    h1 { margin-bottom: $font-size-base; }
    h2 { padding-bottom: $font-size-base; }
    header {
      img {
        max-width: 60px;
        position: absolute;
        left: 15px;
        top: -61px;
      }
    }
  }
}

/*doc
---
title: Cover image width SVG text
name: a-cover-svg
category: Layout - Cover
---

```html_example
<div class="img-hero" style="background-image:url('img/boulot_devs_yann_gilles.jpg')">
  <img src="../img/meet_the_team.svg" alt="" class="img-svg-title">
  <h1>Notre équipe au complet</h1>
</div>
```

*/

.img-hero{
  min-height: 600px;
  background-size: cover;
  background-position: 50% 50%;
  transition: min-height ease-in-out 0.3s;
  position: relative;
  h1{
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
    color: $white;
    padding-top: 2em;
    padding-bottom: 1em;
    margin-bottom: 0;
    z-index: 1;
    @media only screen and (min-width: $screen-sm-min) {
      background: linear-gradient(to bottom, transparentize($midnight-blue, 1) 0%, transparentize($midnight-blue, 0.2) 100%);
    }
  }
  &:before {
    content: '';
    background: linear-gradient(to top, transparentize($white, 1) 0%, transparentize($white, 0.2) 100%);
    position: absolute;
    top: 0;
    left: 0;
    height: 25%;
    width: 100%;
  }
  @media only screen and (max-width: $screen-xs-max) {
    &:after {
      content: '';
      background: linear-gradient(to bottom, transparentize($midnight-blue, 1) 0%, transparentize($midnight-blue, 0.2) 100%);
      position: absolute;
      bottom: 0;
      left: 0;
      height: 25%;
      width: 100%;
    }
  }
  .img-svg-title, .field-name-field-svg-title img{
    position: absolute;
    bottom: 30%;
  }
  @media only screen and (min-width: $screen-xl-min) {
    min-height: 1000px;
  }
  @media only screen and (min-width: $screen-lg-min) and (max-width: $screen-lg-max) {
    min-height: 800px;
  }
  @media only screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
    min-height: 600px;
  }
  @media only screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
    min-height: 400px;
  }
  @media only screen and (max-width: $screen-xs-max) {
    min-height: 200px;
  }
  @media only screen and (max-height: 400px) {
    min-height: 200px;
  }
  @media only screen and (max-height: 800px) and (min-height: 401px) {
    min-height: 400px;
  }
  @media only screen and (max-height: 1000px) and (min-height: 801px) {
    min-height: 600px;
  }
}
.teammate-hero{
  h1{
    padding-bottom: 80px;
  }
}

